--- a/main/templates/add_item.html
+++ b/main/templates/add_item.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head><meta charset="utf-8"><title>Add Item</title></head>
-<body>
-  <h1>Tambah Item</h1>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Simpan</button>
-  </form>
-  <p><a href="{% url 'show_items' %}">Kembali</a></p>
-</body>
-</html>
+
+{% block content %}
+<h1>Tambah Item</h1>
+<form method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Simpan</button>
+</form>
+{% endblock %}
